calendar improvements: 1. after adding an event go to the place where you added it. 2. start date time and end date end time (magkakatabi). 3. name of event yung una sa ififill up. 4. sa side lang dapat and problem sa position odd kasi lower right. 5. make sure hindi naiintrude yung calendar. 6. show the title of the app in the calendar.html and make it look like an app. 7. make a list of events of all the events regardless of date. 8. make the calendar bigger like in google, fill the white space

--- a/public/calendar.css
+++ b/public/calendar.css
@@ -1,9 +1,9 @@
 
-html, body {font-family: Arial, Helvetica, sans-serif;}
+html, body {font-family: Arial, Helvetica, sans-serif; overflow: hidden;}
 * {box-sizing: border-box;}
 
 body {
-    margin: 40px 10px;
+    /* margin: 40px 10px; */
     padding: 0;
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     font-size: 14px;
@@ -11,8 +11,10 @@ body {
 }
 
 #calendar {
-max-width: 900px;
-margin: 0 auto;
+max-width: 90%;
+max-height: 80%;
+margin: auto;
+/* margin-top:  */
 }
 
 /* Button used to open the contact form - fixed at the bottom of the page */
@@ -33,16 +35,18 @@ margin: 0 auto;
 .popup-details {
   display: none;
   position: fixed;
+  top: 20px;
   bottom: 0;
   right: 15px;
-  border: 3px solid #f1f1f1;
+  border: 3px solid #cfcfcf;
   z-index: 9;
+  width: 500px
 }
 
 /* Add styles to the form container */
 .form-container {
   max-width: auto;
-  padding: 6px;
+  padding: 15px;
   background-color: white;
 }
 
@@ -54,6 +58,10 @@ margin: 0 auto;
   margin: 5px 0 22px 0;
   border: none;
   background: #f1f1f1;
+}
+
+#estartdate, #estarttime, #eenddate, #eendtime {
+  width: 33%;
 }
 
 /* When the inputs get focus, do something */
@@ -269,6 +277,7 @@ margin: 0 auto;
   cursor: pointer;
   float: right;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  
 }
 
 #logout:hover{
@@ -309,4 +318,13 @@ margin: 0 auto;
 
 #sdate{
   display: none;
+}
+
+
+#calendar-container {
+  position: fixed;
+  bottom: 0;
+  top: 100px;
+  width: 90%;
+  margin: auto;
 }
